Fixed spacing issue with double trachcan icons

--- a/components/com_wiki/assets/css/wiki.css
+++ b/components/com_wiki/assets/css/wiki.css
@@ -216,6 +216,11 @@
 	#attachments .delete {
 		padding-left: 0;
 		background: transparent;
+		border: none;
+	}
+	#attachments .delete:before {
+		display: none;
+		content: "";
 	}
 
 	/* Stars */
