--- a/plugins/groups/wiki/wiki.css
+++ b/plugins/groups/wiki/wiki.css
@@ -318,6 +318,11 @@
 	#attachments .delete {
 		padding-left: 0;
 		background: transparent;
+		border: none;
+	}
+	#attachments .delete:before {
+		display: none;
+		content: "";
 	}
 /* Admonitions */
 	div.admon-caution, 
